--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2461,7 +2461,8 @@ input, select, textarea {
 	ul.icons {
 		cursor: default;
 		list-style: none;
-		padding-left: 0;
+/* 		padding-left: 0;*/
+		padding-left: 2em; 
 	}
 
 		ul.icons li {
