--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3420,7 +3420,7 @@ input, select, textarea {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 	gap: 1rem;
-	margin-top: 1rem;
+	margin: 1rem;
 }
 
 .solution-card {
