--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -45,7 +45,7 @@ tfoot, thead, tr, th, td, article, aside,
 canvas, details, embed, figure, figcaption,
 footer, header, hgroup, menu, nav, output, ruby,
 section, summary, time, mark, audio, video {
-	margin: 0;
+	margin: 5rem;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
@@ -2869,7 +2869,7 @@ input, select, textarea {
 /* Wrapper */
 
 	#wrapper {
-		background: transparent;
+		background: #fff;
 		padding-right: 20em;
 	}
 
