--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1746,9 +1746,8 @@ input, select, textarea {
 		margin: 0 auto;
 		max-width: calc(100% - 2em);
 		width: 45em;
-/* 		background: #ffffff;
-		box-shadow: 0 2px 4px rgba(13, 27, 42, 0.1); */
-		background-color: transparent;
+		background: #ffffff;
+		box-shadow: 0 2px 4px rgba(13, 27, 42, 0.1);
 		padding-left: 1.25rem;
 		padding-right: 1.25rem;
 	}
